--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -3,12 +3,15 @@ debug=true
 
 [daemon.0]
 host=0.0.0.0:3333
+metric=0.0.0.0:3323
 data=./received_files/dir1
 
 [daemon.1]
 host=0.0.0.0:3334
+metric=0.0.0.0:3324
 data=./received_files/dir2
 
 [daemon.2]
 host=0.0.0.0:3335
+metric=0.0.0.0:3325
 data=./received_files/dir3
