--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -1,18 +1,16 @@
 [global]
 debug=true
 metrics_interval=500
+metrics_host=0.0.0.0:3323
 
 [daemon.0]
 host=0.0.0.0:3333
-metric=0.0.0.0:3323
 data=./received_files/dir1
 
 [daemon.1]
 host=0.0.0.0:3334
-metric=0.0.0.0:3324
 data=./received_files/dir2
 
 [daemon.2]
 host=0.0.0.0:3335
-metric=0.0.0.0:3325
 data=./received_files/dir3
