all daemons run changeReplication server

--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -5,12 +5,15 @@ metrics_host=0.0.0.0:3323
 
 [daemon.0]
 host=0.0.0.0:3333
+chrep=0.0.0.0:2223
 data=./received_files/dir1
 
 [daemon.1]
 host=0.0.0.0:3334
+chrep=0.0.0.0:2224
 data=./received_files/dir2
 
 [daemon.2]
 host=0.0.0.0:3335
+chrep=0.0.0.0:2225
 data=./received_files/dir3
