testing some prometheus collectors

--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -1,19 +1,26 @@
 [global]
 debug=true
 drift_allowed=0.050
-metrics_interval=500
+
+[metrics]
+interval=500
+min_threshold=0.20
+max_threshold=0.80
 
 [daemon.0]
 host=0.0.0.0:3333
 chrep=0.0.0.0:2223
 data=./received_files/dir1
+drive=/dev/sda
 
 [daemon.1]
 host=0.0.0.0:3334
 chrep=0.0.0.0:2224
 data=./received_files/dir2
+drive=/dev/sda
 
 [daemon.2]
 host=0.0.0.0:3335
 chrep=0.0.0.0:2225
 data=./received_files/dir3
+drive=/dev/sda
