--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -1,26 +1,29 @@
 [global]
 debug=true
 drift_allowed=0.050
+replication_order=2,1,3
+polymorph_system=false
 
 [metrics]
 interval=500
+fallback_interval=60000
 min_threshold=0.20
 max_threshold=0.80
 
 [daemon.0]
 host=0.0.0.0:3333
-chrep=0.0.0.0:2223
+change_replication=0.0.0.0:2223
 data=./received_files/dir1
 drive=/dev/sda
 
 [daemon.1]
 host=0.0.0.0:3334
-chrep=0.0.0.0:2224
+change_replication=0.0.0.0:2224
 data=./received_files/dir2
 drive=/dev/sda
 
 [daemon.2]
 host=0.0.0.0:3335
-chrep=0.0.0.0:2225
+change_replication=0.0.0.0:2225
 data=./received_files/dir3
 drive=/dev/sda
