--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -2,7 +2,7 @@
 debug=true
 drift_allowed=0.050
 replication_order=2,1,3
-polymorph_system=false
+polymorphic_system=false
 
 [metrics]
 interval=500
