added plot files

--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -10,19 +10,19 @@ min_threshold=0.20
 max_threshold=0.80
 
 [daemon.0]
-host=0.0.0.0:3333
-change_replication=0.0.0.0:2223
-data=./received_files/dir1
+host=momo-server0:3333
+change_replication=momo-server0:2223
+data=/root/received_files/dir1
 drive=/dev/sda
 
 [daemon.1]
-host=0.0.0.0:3334
-change_replication=0.0.0.0:2224
-data=./received_files/dir2
+host=momo-server1:3334
+change_replication=momo-server1:2224
+data=/root/received_files/dir2
 drive=/dev/sda
 
 [daemon.2]
-host=0.0.0.0:3335
-change_replication=0.0.0.0:2225
-data=./received_files/dir3
+host=momo-server2:3335
+change_replication=momo-server2:2225
+data=/root/received_files/dir3
 drive=/dev/sda
