changed to polymorphic_system=true

--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -1,11 +1,11 @@
 [global]
 debug=true
 replication_order=2,1,3
-polymorphic_system=false
+polymorphic_system=true
 
 [metrics]
-interval=500
-fallback_interval=60000
+interval=600000
+fallback_interval=1800000
 min_threshold=0.20
 max_threshold=0.80
 
