--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,17 +1,28 @@
-name: Go
+name: Go Build and Test
+
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'src/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'src/**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21.x'
+        go-version: '1.20'
+
     - name: Test
       run: go test ./...
+
+    - name: Build
+      run: go build ./...
