regresion on replication modes and config handles

--- a/conf/momo.conf
+++ b/conf/momo.conf
@@ -1,22 +1,28 @@
 [global]
 debug = true
-replication_order = primary-splay
+replication_order = 2,3,1
 polymorphic_system = true
 
 [metrics]
-interval = 10
+interval = 300000
+fallback_interval = 1800000
 min_threshold = 0.1
 max_threshold = 0.9
-fallback_interval = 30
 
 [daemon.0]
-host = localhost:8080
-change_replication = splay
+host = momo-server0:3333
+change_replication = momo-server0:2223
 data = /data/0
 drive = /dev/sda1
 
 [daemon.1]
-host = localhost:8081
-change_replication = splay
+host = momo-server1:3334
+change_replication = momo-server1:2224
 data = /data/1
 drive = /dev/sdb1
+
+[daemon.2]
+host = momo-server2:3335
+change_replication = momo-server2:2225
+data = /data/2
+drive = /dev/sdc1
