--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,23 @@
-name: Go Build and Test
+name: Go
 
 on:
   push:
-    branches: [ master ]
-    paths:
-      - 'src/**'
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
-    paths:
-      - 'src/**'
+    branches: [ "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
+    - uses: actions/checkout@v4
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
-
-    - name: Test
-      run: go test ./...
+        go-version: '1.22'
 
     - name: Build
-      run: go build ./...
+      run: make build
+
+    - name: Test
+      run: make test
